--- a/app/src/main/res/layout/recyclerview_item_row.xml
+++ b/app/src/main/res/layout/recyclerview_item_row.xml
@@ -24,27 +24,24 @@
         android:id="@+id/pointBcg"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        app:srcCompat="?android:attr/textSelectHandleRight"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="19dp"
-        app:layout_constraintTop_toTopOf="@+id/pointsForTaskRV"
-        app:layout_constraintEnd_toEndOf="@+id/pointsForTaskRV"
-        app:layout_constraintStart_toStartOf="@+id/pointsForTaskRV"
-        app:layout_constraintBottom_toBottomOf="@+id/pointsForTaskRV"/>
+        android:layout_marginStart="55dp"
+        app:layout_constraintBottom_toBottomOf="@+id/itemPointsForTask"
+        app:layout_constraintEnd_toEndOf="@+id/itemPointsForTask"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/itemPointsForTask"
+        app:srcCompat="?android:attr/textSelectHandleRight" />
 
     <TextView
-        android:id="@+id/pointsForTaskRV"
+        android:id="@+id/itemPointsForTask"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="55dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="160dp"
         android:text="0"
         android:textColor="#353535"
         android:textSize="28dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/itemDescription"
-        app:layout_constraintEnd_toStartOf="@+id/itemTaskName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/itemImage" />
 
@@ -117,7 +114,7 @@
         app:layout_constraintTop_toBottomOf="@+id/startDateText" />
 
     <TextView
-        android:id="@+id/endDate"
+        android:id="@+id/itemStartDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="dd.mm.yyyy"
@@ -128,7 +125,7 @@
         app:layout_constraintTop_toBottomOf="@+id/itemTaskName" />
 
     <TextView
-        android:id="@+id/Date"
+        android:id="@+id/itemEndDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="dd.mm.yyyy"
@@ -136,7 +133,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/itemDescription1"
-        app:layout_constraintTop_toBottomOf="@+id/endDate" />
+        app:layout_constraintTop_toBottomOf="@+id/itemStartDate" />
 
 
 
