--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".logged.AddTaskActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        tools:context=".logged.AddTaskActivity"
         >
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -30,13 +30,16 @@
             <ScrollView
                 android:id="@+id/scrollView4"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="415dp"
+                android:layout_marginTop="100dp"
+                android:layout_marginBottom="100dp"
+                android:fillViewport="true"
+                android:scrollbarStyle="insideInset"
+                android:scrollbars="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/availablePoints"
-                app:layout_constraintVertical_bias="0.133">
+                app:layout_constraintTop_toTopOf="parent">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -53,6 +56,7 @@
                         android:ems="10"
                         android:hint="@string/task_name_hint"
                         android:inputType="textPersonName"
+                        android:maxLength="30"
                         android:paddingTop="@dimen/task_box_padding"
                         android:paddingEnd="@dimen/task_box_padding" />
 
@@ -67,6 +71,7 @@
                         android:gravity="start|top"
                         android:hint="@string/task_desctiption_hint"
                         android:inputType="textMultiLine"
+                        android:maxLength="600"
                         android:paddingTop="@dimen/task_box_padding"
                         android:paddingEnd="@dimen/task_box_padding" />
 
@@ -106,7 +111,7 @@
                         android:inputType="number"
                         android:paddingTop="@dimen/task_box_padding"
                         android:paddingEnd="@dimen/task_box_padding" />
-                    
+
                 </LinearLayout>
             </ScrollView>
 
@@ -118,8 +123,18 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/scrollView4"
-                app:layout_constraintVertical_bias="0.338" />
+                app:layout_constraintTop_toBottomOf="@+id/scrollView4" />
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/scrollView4" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
