--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -120,25 +120,14 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.819"
-        android:visibility="gone"/>
-
-    <Button
-        android:id="@+id/signUpWithGoogleButtonSignUpA"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sign up with google"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.89"
-        android:visibility="visible"/>
+        app:layout_constraintVertical_bias="0.86"
+        android:layout_marginBottom="32dp"/>
 
   </androidx.constraintlayout.widget.ConstraintLayout>
   </FrameLayout>
