--- a/app/src/main/res/layout/activity_user_home_page.xml
+++ b/app/src/main/res/layout/activity_user_home_page.xml
@@ -20,7 +20,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/bottom_navigation"
-            android:layout_marginBottom="80dp">
+            android:layout_marginBottom="0dp"
+            android:layout_marginTop="60dp">
 
 
         </FrameLayout>
@@ -29,9 +30,8 @@
             android:id="@+id/fAddTaskButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="605dp"
-            android:layout_marginBottom="60dp"
-            android:layout_marginStart="340dp"
+            android:layout_marginBottom="90dp"
+            android:layout_marginStart="330dp"
             android:layout_marginEnd="10dp"
             android:src="@drawable/ic_baseline_add_24"
             android:layout_alignParentBottom="true"/>
