--- a/app/src/main/res/layout/fragment_in_progress.xml
+++ b/app/src/main/res/layout/fragment_in_progress.xml
@@ -29,14 +29,14 @@
 <!--         app:layout_constraintRight_toRightOf="parent"-->
 <!--         app:layout_constraintTop_toTopOf="parent"/>-->
 
-     <com.google.android.material.floatingactionbutton.FloatingActionButton
-         android:id="@+id/fab"
-         app:layout_constraintBottom_toBottomOf="parent"
-         app:layout_constraintEnd_toEndOf="parent"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:layout_margin="16dp"
-         android:contentDescription="temporary_add_user"/>
+<!--     <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--         android:id="@+id/fab"-->
+<!--         app:layout_constraintBottom_toBottomOf="parent"-->
+<!--         app:layout_constraintEnd_toEndOf="parent"-->
+<!--         android:layout_width="wrap_content"-->
+<!--         android:layout_height="wrap_content"-->
+<!--         android:layout_margin="16dp"-->
+<!--         android:contentDescription="temporary_add_user"/>-->
 
 <!--     <ScrollView-->
 <!--         android:layout_width="395dp"-->
