Added CardView for RecyclerView

--- a/app/src/main/res/layout/recyclerview_item_row.xml
+++ b/app/src/main/res/layout/recyclerview_item_row.xml
@@ -7,151 +7,151 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="370dp"
-        android:layout_height="1dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="130dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="?android:attr/listDivider"
-        android:background="@color/teal_200"/>
+<!--    <ImageView-->
+<!--        android:id="@+id/imageView2"-->
+<!--        android:layout_width="370dp"-->
+<!--        android:layout_height="1dp"-->
+<!--        android:layout_marginStart="1dp"-->
+<!--        android:layout_marginTop="16dp"-->
+<!--        android:layout_marginEnd="1dp"-->
+<!--        android:layout_marginBottom="130dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:srcCompat="?android:attr/listDivider"-->
+<!--        android:background="@color/teal_200"/>-->
 
-    <ImageView
-        android:id="@+id/itemImage"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:adjustViewBounds="true"
-        app:layout_constraintBottom_toTopOf="@+id/itemTaskName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.74"
-        />
+<!--    <ImageView-->
+<!--        android:id="@+id/itemImage"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="8dp"-->
+<!--        android:adjustViewBounds="true"-->
+<!--        app:layout_constraintBottom_toTopOf="@+id/itemTaskName"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.5"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintVertical_bias="0.74"-->
+<!--        />-->
 
 
 
-    <ImageView
-        android:id="@+id/pointBcg"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="55dp"
-        app:layout_constraintBottom_toBottomOf="@+id/itemPointsForTask"
-        app:layout_constraintEnd_toEndOf="@+id/itemPointsForTask"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/itemPointsForTask"
-        app:srcCompat="?android:attr/textSelectHandleRight" />
+<!--    <ImageView-->
+<!--        android:id="@+id/pointBcg"-->
+<!--        android:layout_width="100dp"-->
+<!--        android:layout_height="100dp"-->
+<!--        android:layout_marginStart="55dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="@+id/itemPointsForTask"-->
+<!--        app:layout_constraintEnd_toEndOf="@+id/itemPointsForTask"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="@+id/itemPointsForTask"-->
+<!--        app:srcCompat="?android:attr/textSelectHandleRight" />-->
 
-    <TextView
-        android:id="@+id/itemPointsForTask"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="55dp"
-        android:layout_marginTop="8dp"
-        android:text="0"
-        android:textColor="#353535"
-        android:textSize="28dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/itemDescription"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/itemImage" />
+<!--    <TextView-->
+<!--        android:id="@+id/itemPointsForTask"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="55dp"-->
+<!--        android:layout_marginTop="8dp"-->
+<!--        android:text="0"-->
+<!--        android:textColor="#353535"-->
+<!--        android:textSize="28dp"-->
+<!--        android:textStyle="bold"-->
+<!--        app:layout_constraintBottom_toTopOf="@id/itemDescription"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/itemImage" />-->
 
-    <TextView
-        android:id="@+id/itemTaskName"
-        android:layout_width="wrap_content"
-        android:layout_height="26dp"
-        android:layout_gravity="top|end"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="20dp"
-        android:layout_weight="0"
-        android:text="Task Name"
-        android:textColor="#353535"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/itemDescription"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.9"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/itemImage"
-        tools:text="Task Name" />
+<!--    <TextView-->
+<!--        android:id="@+id/itemTaskName"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="26dp"-->
+<!--        android:layout_gravity="top|end"-->
+<!--        android:layout_marginTop="8dp"-->
+<!--        android:layout_marginEnd="20dp"-->
+<!--        android:layout_weight="0"-->
+<!--        android:text="Task Name"-->
+<!--        android:textColor="#353535"-->
+<!--        android:textSize="20dp"-->
+<!--        app:layout_constraintBottom_toTopOf="@+id/itemDescription"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.9"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/itemImage"-->
+<!--        tools:text="Task Name" />-->
 
-    <TextView
-        android:id="@+id/itemDescription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center|start"
-        android:layout_weight="1"
-        android:ellipsize="end"
-        android:maxLines="5"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/itemTaskName" />
+<!--    <TextView-->
+<!--        android:id="@+id/itemDescription"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="center|start"-->
+<!--        android:layout_weight="1"-->
+<!--        android:ellipsize="end"-->
+<!--        android:maxLines="5"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.5"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/itemTaskName" />-->
 
-    <TextView
-        android:id="@+id/itemDescription1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center|start"
-        android:layout_weight="1"
-        android:ellipsize="end"
-        android:maxLines="5"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/itemDescription" />
+<!--    <TextView-->
+<!--        android:id="@+id/itemDescription1"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="center|start"-->
+<!--        android:layout_weight="1"-->
+<!--        android:ellipsize="end"-->
+<!--        android:maxLines="5"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.5"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/itemDescription" />-->
 
-    <TextView
-        android:id="@+id/startDateText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#969696"
-        android:text="Start date"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/itemDescription"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/itemTaskName" />
+<!--    <TextView-->
+<!--        android:id="@+id/startDateText"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:textColor="#969696"-->
+<!--        android:text="Start date"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toStartOf="@+id/itemDescription"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/itemTaskName" />-->
 
-    <TextView
-        android:id="@+id/endDateText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="End date"
-        android:textColor="#969696"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/itemDescription1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/startDateText" />
+<!--    <TextView-->
+<!--        android:id="@+id/endDateText"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="End date"-->
+<!--        android:textColor="#969696"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toStartOf="@+id/itemDescription1"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/startDateText" />-->
 
-    <TextView
-        android:id="@+id/itemStartDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="dd.mm.yyyy"
-        android:textColor="#353535"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/itemDescription"
-        app:layout_constraintTop_toBottomOf="@+id/itemTaskName" />
+<!--    <TextView-->
+<!--        android:id="@+id/itemStartDate"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="dd.mm.yyyy"-->
+<!--        android:textColor="#353535"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toEndOf="@+id/itemDescription"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/itemTaskName" />-->
 
-    <TextView
-        android:id="@+id/itemEndDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="dd.mm.yyyy"
-        android:textColor="#353535"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/itemDescription1"
-        app:layout_constraintTop_toBottomOf="@+id/itemStartDate" />
+<!--    <TextView-->
+<!--        android:id="@+id/itemEndDate"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="dd.mm.yyyy"-->
+<!--        android:textColor="#353535"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toEndOf="@+id/itemDescription1"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/itemStartDate" />-->
 
 
 
