Updated CardView for RecyclerView. Added on click event for items in RecyclerView. Edited out part of email validation.

--- a/app/src/main/res/layout/recyclerview_task_item.xml
+++ b/app/src/main/res/layout/recyclerview_task_item.xml
@@ -1,96 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="220dp">
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_horizontal"
+    android:layout_marginStart="8dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginEnd="8dp"
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?selectableItemBackground"
+    card_view:cardCornerRadius="10dp"
+    card_view:cardElevation="10dp">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
-    <!-- A CardView that contains a TextView -->
-    <androidx.cardview.widget.CardView
-        android:id="@+id/card_view"
-        android:layout_width="400dp"
-        android:layout_height="200dp"
-        android:layout_gravity="center_horizontal"
-        card_view:cardCornerRadius="4dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:foreground="?selectableItemBackground">
-
-        <!--        <androidx.constraintlayout.widget.ConstraintLayout-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="match_parent">-->
 
         <TextView
             android:id="@+id/itemTaskName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="100dp"
             android:text="Task Name"
-            android:textSize="25dp" />
+            android:textSize="25dp"
+            card_view:layout_constraintBottom_toBottomOf="parent"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/itemTaskStartDateText"
-            android:layout_width="wrap_content"
+            android:layout_width="75dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="100dp"
-            android:layout_marginEnd="50dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="70dp"
             android:text="Start Date"
-            android:textSize="16dp" />
+            android:textSize="16dp"
+            card_view:layout_constraintBottom_toBottomOf="parent"
+            card_view:layout_constraintEnd_toStartOf="@id/itemTaskStartDate"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toBottomOf="@+id/itemTaskName" />
 
         <TextView
             android:id="@+id/itemTaskStartDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="100dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="70dp"
             android:text="00.00.0000"
-            android:textSize="16dp" />
+            android:textSize="16dp"
+            card_view:layout_constraintBottom_toBottomOf="parent"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintStart_toEndOf="@id/itemTaskStartDateText"
+            card_view:layout_constraintTop_toBottomOf="@id/itemTaskName" />
+
 
         <TextView
             android:id="@+id/itemTaskEndDateText"
-            android:layout_width="wrap_content"
+            android:layout_width="75dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="130dp"
-            android:layout_marginEnd="50dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="40dp"
             android:text="End Date"
-            android:textSize="16dp" />
+            android:textSize="16dp"
+            card_view:layout_constraintBottom_toBottomOf="parent"
+            card_view:layout_constraintEnd_toStartOf="@id/itemTaskEndDate"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toBottomOf="@id/itemTaskStartDateText" />
 
         <TextView
             android:id="@+id/itemTaskEndDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="130dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="40dp"
             android:text="00.00.0000"
-            android:textSize="16dp" />
+            android:textSize="16dp"
+            card_view:layout_constraintBottom_toBottomOf="parent"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintStart_toEndOf="@id/itemTaskEndDateText"
+            card_view:layout_constraintTop_toBottomOf="@id/itemTaskStartDate" />
 
         <TextView
             android:id="@+id/itemTaskPointsText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:layout_marginTop="170dp"
-            android:layout_marginEnd="60dp"
+            android:layout_marginStart="100dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="10dp"
             android:text="points for the task: "
-            android:textSize="16dp" />
+            android:textSize="16dp"
+            card_view:layout_constraintBottom_toBottomOf="parent"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toBottomOf="@+id/itemTaskEndDate" />
 
         <TextView
             android:id="@+id/itemTaskPoints"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:layout_marginTop="170dp"
-            android:layout_marginEnd="30dp"
+            android:layout_marginStart="300dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="10dp"
             android:text="1"
-            android:textSize="16dp" />
-        <!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
+            android:textSize="16dp"
+            card_view:layout_constraintBottom_toBottomOf="parent"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toBottomOf="@+id/itemTaskEndDate" />
 
-    </androidx.cardview.widget.CardView>
 
-</LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.cardview.widget.CardView>
