--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -30,32 +30,34 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="108dp"
+            android:layout_marginStart="180dp"
             android:text="@string/user_name"
-            android:textAlignment="center"
+            android:textAlignment="textStart"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.905"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
 
         <TextView
             android:id="@+id/userSurname"
             style="@style/text_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="180dp"
+            android:layout_marginBottom="90dp"
             android:text="@string/user_surname"
-            android:textAlignment="center"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:textAlignment="textStart"
+            app:layout_constraintBottom_toTopOf="@id/userEmailAddress"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.905"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/userName"
-            app:layout_constraintVertical_bias="0.012" />
+            app:layout_constraintTop_toBottomOf="@+id/userName"/>
 
         <TextView
             android:id="@+id/userEmailAddress"
             style="@style/text_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="70dp"
             android:text="@string/user_email_address"
             android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -129,6 +131,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.875" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
